[gd_scene load_steps=18 format=3 uid="uid://dn6slpvc7fe7p"]

[ext_resource type="Script" path="res://pages/chats/chat_messages/ChatMessages.gd" id="1_moulp"]
[ext_resource type="PackedScene" uid="uid://82luo3c72are" path="res://components/avatar/Avatar.tscn" id="1_rmo5k"]
[ext_resource type="FontFile" uid="uid://chn0vrpw0i4y2" path="res://assets/fonts/Roboto/Roboto-Bold.ttf" id="2_8rwvf"]
[ext_resource type="StyleBox" uid="uid://bjoa0j5wb5g66" path="res://assets/styles/empty.tres" id="3_d32gs"]
[ext_resource type="Theme" uid="uid://c2ke1g0gq6u4r" path="res://assets/styles/scroll_bar.tres" id="9_4fgrk"]
[ext_resource type="PackedScene" uid="uid://d0lrk05ecisgr" path="res://pages/chats/chat_messages/message/Message.tscn" id="9_abb6j"]
[ext_resource type="Texture2D" uid="uid://gykyvunygdod" path="res://assets/icons/lock.svg" id="10_1v77x"]
[ext_resource type="PackedScene" uid="uid://bm8vhw76hb572" path="res://pages/chats/chat_messages/input_area/InputArea.tscn" id="12_t3hjc"]
[ext_resource type="Texture2D" uid="uid://6rr4xuo5lt0w" path="res://assets/icons/horizontal_dots.svg" id="13_dots"]
[ext_resource type="PackedScene" uid="uid://c6jhyw2j7n2ky" path="res://pages/chats/chat_messages/ModelSelectionPanel.tscn" id="14_model"]
[ext_resource type="PackedScene" uid="uid://cs8p2j7f5y8v3" path="res://pages/chats/chat_messages/ChatSettingsPanel.tscn" id="15_settings"]
[ext_resource type="Script" path="res://components/draggable_separator/DraggableSeparator.gd" id="16_drag"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3fsay"]
draw_center = false
border_width_bottom = 1
border_color = Color(0.109804, 0.109804, 0.109804, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i6ruq"]
bg_color = Color(0.207843, 0.207843, 0.207843, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qqvln"]
content_margin_left = 12.0
content_margin_top = 10.0
content_margin_right = 12.0
content_margin_bottom = 10.0
bg_color = Color(0.529412, 0.486275, 0.403922, 0.694118)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_msg_panel"]
bg_color = Color(0, 0, 0, 0.6)

[sub_resource type="PackedScene" id="PackedScene_3d_placeholder"]
_bundled = {
"conn_count": 0,
"conns": PackedInt32Array(),
"editable_instances": [],
"names": PackedStringArray("Character3DScene", "Node3D", "Camera3D", "Camera3D", "transform", "DirectionalLight3D", "DirectionalLight3D", "light_color", "MeshInstance3D", "MeshInstance3D", "mesh", "BoxMesh"),
"node_count": 4,
"node_paths": [],
"nodes": PackedInt32Array(-1, -1, 1, 0, -1, 0, 0, 1073741824, 0, 3, 2, -1, 1, 4, 0, 0, 1073741825, 0, 6, 5, -1, 2, 4, 1, 7, 2, 0, 1073741826, 0, 9, 8, -1, 1, 10, 3, 0),
"variants": [Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 1.5, 3), Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 5, 5), Color(1, 0.9, 0.8, 1), SubResource("BoxMesh_26840")],
"version": 3
}

[sub_resource type="BoxMesh" id="BoxMesh_26840"]
size = Vector3(1, 2, 1)

[node name="ChatMessages" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_moulp")

[node name="LayerB_3DBackground" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewportContainer" type="SubViewportContainer" parent="LayerB_3DBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="LayerB_3DBackground/SubViewportContainer"]
unique_name_in_owner = true
own_world_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(1080, 2340)
render_target_update_mode = 4

[node name="Character3DScene" type="Node3D" parent="LayerB_3DBackground/SubViewportContainer/SubViewport"]
unique_name_in_owner = true

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="LayerB_3DBackground/SubViewportContainer/SubViewport/Character3DScene"]
transform = Transform3D(1, 0, 0, 0, 0.655866, 0.754877, 0, -0.754877, 0.655866, 0, 3.86877, 2.72147)

[node name="Camera3D" type="Camera3D" parent="LayerB_3DBackground/SubViewportContainer/SubViewport/Character3DScene"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 2.7)

[node name="ModelPlaceholder" type="Marker3D" parent="LayerB_3DBackground/SubViewportContainer/SubViewport/Character3DScene"]
unique_name_in_owner = true

[node name="TempCube" type="MeshInstance3D" parent="LayerB_3DBackground/SubViewportContainer/SubViewport/Character3DScene/ModelPlaceholder"]
mesh = SubResource("BoxMesh_26840")

[node name="LayerA_UI_Foreground" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Header" type="PanelContainer" parent="LayerA_UI_Foreground"]
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_3fsay")

[node name="MarginContainer" type="MarginContainer" parent="LayerA_UI_Foreground/Header"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="LayerA_UI_Foreground/Header/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="BackBtn" type="Button" parent="LayerA_UI_Foreground/Header/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 80)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = ExtResource("3_d32gs")
theme_override_styles/hover = SubResource("StyleBoxFlat_i6ruq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i6ruq")
theme_override_styles/disabled = ExtResource("3_d32gs")
theme_override_styles/focus = ExtResource("3_d32gs")

[node name="Label" type="Label" parent="LayerA_UI_Foreground/Header/MarginContainer/HBoxContainer/BackBtn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 48
text = "<"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Contact" type="HBoxContainer" parent="LayerA_UI_Foreground/Header/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 24

[node name="ContactAvatar" parent="LayerA_UI_Foreground/Header/MarginContainer/HBoxContainer/Contact" instance=ExtResource("1_rmo5k")]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LayerA_UI_Foreground/Header/MarginContainer/HBoxContainer/Contact"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="ContactName" type="Label" parent="LayerA_UI_Foreground/Header/MarginContainer/HBoxContainer/Contact/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.815686, 0.815686, 0.815686, 1)
theme_override_fonts/font = ExtResource("2_8rwvf")
theme_override_font_sizes/font_size = 42
text = "Jane Doe"
vertical_alignment = 2

[node name="ContactSubtitle" type="Label" parent="LayerA_UI_Foreground/Header/MarginContainer/HBoxContainer/Contact/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.533333, 0.533333, 0.533333, 1)
theme_override_font_sizes/font_size = 28
text = "点击查看联系人信息"

[node name="ModelBtn" type="Button" parent="LayerA_UI_Foreground/Header/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 70)
layout_mode = 2
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_qqvln")
theme_override_styles/hover = SubResource("StyleBoxFlat_qqvln")
theme_override_styles/pressed = SubResource("StyleBoxFlat_qqvln")
theme_override_fonts/font = ExtResource("2_8rwvf")
theme_override_font_sizes/font_size = 28
text = "G 3尊"

[node name="MoreMenuBtn" type="Button" parent="LayerA_UI_Foreground/Header/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = ExtResource("3_d32gs")
theme_override_styles/hover = SubResource("StyleBoxFlat_i6ruq")
theme_override_styles/pressed = SubResource("StyleBoxFlat_i6ruq")
theme_override_styles/disabled = ExtResource("3_d32gs")
theme_override_styles/focus = ExtResource("3_d32gs")

[node name="TextureRect" type="TextureRect" parent="LayerA_UI_Foreground/Header/MarginContainer/HBoxContainer/MoreMenuBtn"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("13_dots")
expand_mode = 1
stretch_mode = 5

[node name="TransparentSpacer" type="Control" parent="LayerA_UI_Foreground"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="DraggableSeparator" type="Control" parent="LayerA_UI_Foreground"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("16_drag")

[node name="MessagesPanel" type="Panel" parent="LayerA_UI_Foreground"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 1000)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_msg_panel")

[node name="MessagesScrollContainer" type="ScrollContainer" parent="LayerA_UI_Foreground/MessagesPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("9_4fgrk")
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="LayerA_UI_Foreground/MessagesPanel/MessagesScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="VBoxContainer" type="VBoxContainer" parent="LayerA_UI_Foreground/MessagesPanel/MessagesScrollContainer/MarginContainer"]
layout_mode = 2

[node name="MessagesAreEncrypted" type="PanelContainer" parent="LayerA_UI_Foreground/MessagesPanel/MessagesScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_qqvln")

[node name="HBoxContainer" type="HBoxContainer" parent="LayerA_UI_Foreground/MessagesPanel/MessagesScrollContainer/MarginContainer/VBoxContainer/MessagesAreEncrypted"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="LayerA_UI_Foreground/MessagesPanel/MessagesScrollContainer/MarginContainer/VBoxContainer/MessagesAreEncrypted/HBoxContainer"]
custom_minimum_size = Vector2(12, 0)
layout_mode = 2
texture = ExtResource("10_1v77x")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="LayerA_UI_Foreground/MessagesPanel/MessagesScrollContainer/MarginContainer/VBoxContainer/MessagesAreEncrypted/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "消息和通话已经过端到端加密。"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="LayerA_UI_Foreground/MessagesPanel/MessagesScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 64
theme_override_styles/separator = ExtResource("3_d32gs")

[node name="Messages" type="VBoxContainer" parent="LayerA_UI_Foreground/MessagesPanel/MessagesScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 12

[node name="Message" parent="LayerA_UI_Foreground/MessagesPanel/MessagesScrollContainer/MarginContainer/VBoxContainer/Messages" instance=ExtResource("9_abb6j")]
layout_mode = 2

[node name="ScrollDownHelper" type="HSeparator" parent="LayerA_UI_Foreground/MessagesPanel/MessagesScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 30
theme_override_styles/separator = ExtResource("3_d32gs")

[node name="InputArea" parent="LayerA_UI_Foreground" instance=ExtResource("12_t3hjc")]
layout_mode = 2

[node name="ModelSelectionPanel" parent="." instance=ExtResource("14_model")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="ChatSettingsPanel" parent="." instance=ExtResource("15_settings")]
unique_name_in_owner = true
visible = false
layout_mode = 1
